# rust_ws_server

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs  ws_handler.rs
