[package]
name = "chess_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
tokio-tungstenite = "0.21.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
chrono = "0.4"
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4"] }