[package]
name = "chess_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "io-util", "net"] }
warp = { version = "0.3", features = ["tls"] }
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
tokio-tungstenite = "0.21.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4"] }
shakmaty = "0.26.0"
rand = "0.8.5"
base32 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4.0"